feat githuba action

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
-version: '3'
 services:
   affshop-strapi:
     container_name: affshop-strapi
-    build: .
-    image: affshop-strapi:latest
+    image: reksamur/affshop-strapi:latest
     restart: unless-stopped
     env_file: .env
     environment:
@@ -21,19 +19,17 @@ services:
       - ./src:/opt/app/src
       - ./package.json:/opt/package.json
       - ./package-lock.json:/opt/package-lock.json
-
       - ./.env:/opt/app/.env
       - ./public/uploads:/opt/app/public/uploads
     ports:
-      - '1337:1337'
+      - "1337:1337"
     networks:
       - affshop-strapi
     depends_on:
       - affshop-strapiDB
-      
+
   affshop-strapiDB:
     container_name: affshop-strapiDB
-    platform: linux/amd64 #for platform error on Apple M1 chips
     restart: unless-stopped
     env_file: .env
     image: postgres:14.5-alpine
@@ -42,20 +38,18 @@ services:
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
       POSTGRES_DB: ${DATABASE_NAME}
     volumes:
-      - affshop-strapi-data:/var/lib/postgresql/data/ #using a volume
-      #- ./data:/var/lib/postgresql/data/ # if you want to use a bind folder
-
+      - affshop-strapi-data:/var/lib/postgresql/data/
     ports:
-      - '5432:5432'
+      - "5432:5432"
     networks:
       - affshop-strapi
-      
+
   affshop-strapiAdminer:
     container_name: affshop-strapiAdminer
     image: adminer
     restart: unless-stopped
     ports:
-      - '9090:8080'
+      - "9090:8080"
     environment:
       - ADMINER_DEFAULT_SERVER=affshop-strapiDB
     networks:
