update docker file

--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile
+          file: ./Dockerfile.prod
           push: true
           tags: |
             reksamur/affshop-strapi:latest
